--- a/main/job-detail.html
+++ b/main/job-detail.html
@@ -22,26 +22,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container-xxl bg-white p-0">
-        <!-- Spinner Start -->
-        <div id="spinner"
-            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
-        </div>
-        <!-- Spinner End -->
+
 
 
         <!-- Job Detail Start -->
@@ -50,7 +43,7 @@
                 <div class="row gy-5 gx-4">
                     <div class="col-lg-8">
                         <div class="d-flex align-items-center mb-5">
-                            <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-2.jpg" alt=""
+                            <img class="flex-shrink-0 img-fluid border rounded" src="/img/com-logo-2.jpg" alt=""
                                 style="width: 80px; height: 80px;">
                             <div class="text-start ps-4">
                                 <h3 class="mb-3">Marketing Manager</h3>
@@ -65,42 +58,31 @@
 
                         <div class="mb-5">
                             <h4 class="mb-3">Job description</h4>
-                            <p>Dolor justo tempor duo ipsum accusam rebum gubergren erat. Elitr stet dolor vero clita
-                                labore gubergren. Kasd sed ipsum elitr clita rebum ut sea diam tempor. Sadipscing nonumy
-                                vero labore invidunt dolor sed, eirmod dolore amet aliquyam consetetur lorem, amet elitr
-                                clita et sed consetetur dolore accusam. Vero kasd nonumy justo rebum stet. Ipsum amet
-                                sed lorem sea magna. Rebum vero dolores dolores elitr vero dolores magna, stet sea
-                                sadipscing stet et. Est voluptua et sanctus at sanctus erat vero sed sed, amet duo no
-                                diam clita rebum duo, accusam tempor takimata clita stet nonumy rebum est invidunt stet,
-                                dolor.</p>
+                            <p>Marketing manager position. Responsible for Public relations, bussiness relations and also social media.
+                                As a company we strive to make our image transparent and the best. Your job will require a lot of creative thinking
+                                on how to sell our company and bring in new customers with a welcoming manner. We want the best for all and our team 
+                                is dedicated in doing that. 
+                            </p>
                             <h4 class="mb-3">Responsibility</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet
-                                voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
+                            <p>Manage team, social media, public relations, bussines relations and also set up meetings with investors.</p>
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum
-                                    accusam</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita
-                                    labore gubergren</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Social Media</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Meetings</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Press conferences
                                 </li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at
-                                    sanctus erat</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Summaries of discussions</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Team messages
                                 </li>
                             </ul>
                             <h4 class="mb-3">Qualifications</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet
-                                voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
+                            <p>We want anyone with experience in marketing and managing</p>
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum
-                                    accusam</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita
-                                    labore gubergren</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>4 years bachelors</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>2 years of experience</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Team work 
                                 </li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at
-                                    sanctus erat</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Communication</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Portfolio
                                 </li>
                             </ul>
                         </div>
@@ -131,7 +113,7 @@
                             <br>
                             <div class="row g-3">
                                 <div class="col-12">
-                                    <button class="btn btn-primary w-100" onclick="backbutton()">Go Back</button>
+                                    <button class="btn btn-primary w-100" onclick="job-list.html">Go Back</button>
                                 </div>
                             </div>
                         </div>
@@ -139,7 +121,7 @@
 
                     <div class="col-lg-4">
                         <div class="bg-light rounded p-5 mb-4 wow slideInUp" data-wow-delay="0.1s">
-                            <h4 class="mb-4">Job Summery</h4>
+                            <h4 class="mb-4">Job Summary</h4>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Published On: 01 Jan, 2045</p>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Vacancy: 123 Position</p>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: Full Time</p>
@@ -150,10 +132,9 @@
                         </div>
                         <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
                             <h4 class="mb-4">Company Detail</h4>
-                            <p class="m-0">Ipsum dolor ipsum accusam stet et et diam dolores, sed rebum sadipscing elitr
-                                vero dolores. Lorem dolore elitr justo et no gubergren sadipscing, ipsum et takimata
-                                aliquyam et rebum est ipsum lorem diam. Et lorem magna eirmod est et et sanctus et, kasd
-                                clita labore.</p>
+                            <p class="m-0">International hearts is a organization that is trying to reach others hearts by providing reduced and free health care while also reaching our to the tech world for help on more efficient
+                                and usable technology that medicine can use.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -167,14 +148,14 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/lib/wow/wow.min.js"></script>
+        <script src="/lib/easing/easing.min.js"></script>
+        <script src="/lib/waypoints/waypoints.min.js"></script>
+        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/login.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/login.js"></script>
+        <script src="/js/main.js"></script>
 
 </body>
 
