--- a/main/recruiter-register.html
+++ b/main/recruiter-register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/dashboard.css" />
+    <link rel="stylesheet" href="/css/dashboard.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,11 +29,11 @@
       crossorigin="anonymous"
     />
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -50,12 +50,12 @@
       <nav>
         <div class="navbar">
           <div class="logo">
-            <img src="img/logo.jpg" alt="" />
+            <img src="/img/logo.jpg" alt="" />
             <h1 style="font-size: 25px">Portal</h1>
           </div>
           <ul>
             <li>
-              <a href="recruiter.php"><i class="fas fa-user"></i>
+              <a href="job-list.html"><i class="fas fa-user"></i>
                 <span class="nav-item">Dashboard</span></a
               >
             </li>
@@ -85,7 +85,7 @@
         </div></br>
         <h3 style="text-align: center;">Enter Company Details</h3>
         <div class="updation">
-          <form action="php/companyRegistration.php" method="post">
+          <form action="/php/companyRegistration.php" method="post">
           <div class="mb-3">
             <label for="Company" class="form-label">Company ID</label>
             <input type="text" class="form-control" id="Company" name="comp_id" placeholder="">
