--- a/main/recruiter-jobpost.html
+++ b/main/recruiter-jobpost.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/dashboard.css" />
+    <link rel="stylesheet" href="/css/dashboard.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,11 +18,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
@@ -36,12 +36,12 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <img src="img/logo.jpg" alt="" />
+                    <img src="/img/logo.jpg" alt="" />
                     <h1 style="font-size: 25px">Portal</h1>
                 </div>
                 <ul>
                     <li>
-                        <a href="recruiter.php"><i class="fas fa-user"></i>
+                        <a href="job-list.html"><i class="fas fa-user"></i>
                             <span class="nav-item">Dashboard</span></a>
                     </li>
                     <li>
@@ -63,12 +63,12 @@
      
         <section class="main">
             <div class="main-top">
-                <p>Explore the opportunites</p>
+                <p>Explore the opportunites</p> 
             </div>
             </br>
             <h3 style="text-align: center;">Enter the details for the Job</h3>
                 <div class="updation">
-                    <form action="php/postjob.php" method="post">
+                    <form action="/php/postjob.php" method="post">
 
                     <div class="mb-3">
                         <label for="Company" class="form-label">Recruiter ID</label>
