--- a/main/login.html
+++ b/main/login.html
@@ -41,20 +41,18 @@
                 <input type="password" placeholder="Confirm password" name="confirm_password" />
               </div>
               <div class="input-group">
-                <div class="preferences">
-                  <div class="recruiter">
-                    <label for="recuriter1">Recuriter</label>
-                    <input type="checkbox" value="A" name="check_recruit" />
-                  </div>
-                  <div class="jobseeker">
-                    <label for="jobseeker1">Jobseeker</label>
-                    <input type="checkbox" value="B" name="user" />
-                  </div>
-                </div>
+                <label>
+                  <input type="radio" name="user_type" value="A" required>
+                  Recruiter
+                </label>
+                <label>
+                  <input type="radio" name="user_type" value="B" required>
+                  Jobseeker
+                </label>
               </div>
               
               
-              <button> <a href="index.html"  class="backbutton"> Sign up</a> </button>
+              <button type="submit">Sign up</button>
             </form>
               <p>
                 <span> Already have an account? </span>
@@ -79,19 +77,18 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" placeholder="Password" name="password"/>
               </div>
-              <div class="input-group">
-                <div class="preferences">
-                  <div class="recruiter">
-                    <label for="recuriter1">Recuriter</label>
-                    <input type="checkbox" value="A" name="check_recruit" />
-                  </div>
-                  <div class="jobseeker">
-                    <label for="jobseeker1">Jobseeker</label>
-                    <input type="checkbox" value="B" name="user" />
-                  </div>
-                </div>
-              </div>
-                <button>Sign in</button>
+  <div class="input-group">
+    <label>
+      <input type="radio" name="user_type" value="A" required>
+      Recruiter
+    </label>
+    <label>
+      <input type="radio" name="user_type" value="B" required>
+      Jobseeker
+    </label>
+  </div>
+
+  <button type="submit">Sign in</button>
             </form>
               <p>
                 <b> Forgot password? </b>
