--- a/main/recruiter-jobpost.html
+++ b/main/recruiter-jobpost.html
@@ -28,7 +28,7 @@
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Document</title>
+    <title>List a Job</title>
 </head>
 
 <body>
@@ -52,7 +52,6 @@
                         <a href="recruiter-jobpost.html"><i class="fas fa-chart-bar"></i>
                             <span class="nav-item">List a Job</span></a>
                     </li>
-                   
                     <li>
                         <a href="login.html" class="Logout"><i class="fas fa-sign-out-alt"></i>
                             <span class="nav-item">Log Out</span></a>
@@ -60,53 +59,36 @@
                 </ul>
             </div>
         </nav>
-     
+
         <section class="main">
             <div class="main-top">
-                <p>Explore the opportunites</p> 
+                <p>Explore the opportunities</p>
             </div>
-            </br>
-            <h3 style="text-align: center;">Enter the details for the Job</h3>
-                <div class="updation">
-                    <form action="/php/postjob.php" method="post">
-
+            <br />
+            <h3 class="text-center">Enter the details for the Job</h3>
+            <div class="updation">
+                <form method="POST" action="../php/postjob.php" class="p-4 border rounded bg-light">
                     <div class="mb-3">
-                        <label for="Company" class="form-label">Recruiter ID</label>
-                        <input type="text" class="form-control" id="Recruiter" name="recid" placeholder="">
-                      </div>
-                      <div class="mb-3">
-                        <label for="Company" class="form-label">Company ID</label>
-                        <input type="text" class="form-control" id="Company" name="compid" placeholder="">
-                      </div>
-                    <div class="mb-3">
-                        <label for="Designation" class="form-label">Designation</label>
-                        <input type="text" class="form-control" id="Designation" name="designation" placeholder="eg.Software Engineer">
+                        <label for="title" class="form-label">Job Title:</label>
+                        <input type="text" id="title" name="title" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="Company Name" class="form-label">Company Name</label>
-                        <input type="text" class="form-control" id="Company Name" name="compname" placeholder="eg. Google, facebook etc">
+                        <label for="description" class="form-label">Description:</label>
+                        <textarea id="description" name="description" class="form-control" rows="4" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="Location" class="form-label">Location</label>
-                        <input type="text" class="form-control" id="Location" name="location" placeholder="eg. india">
+                        <label for="salary" class="form-label">Salary:</label>
+                        <input type="number" id="salary" name="salary" class="form-control" step="0.01" required>
                     </div>
-
                     <div class="mb-3">
-                        <label for="Salary" class="form-label">Salary</label>
-                        <input type="text" class="form-control" id="Salary" name="salary" placeholder="">
+                        <label for="compid" class="form-label">Company ID:</label>
+                        <input type="number" id="compid" name="compid" class="form-control" required>
                     </div>
-
-                    <div class="mb-3">
-                        <label for="Designation" class="form-label"> Description</label>
-                        <textarea class="form-control" id="Description" name="description" rows="3"></textarea>
-                    </div>
-                    <button class="btn btn-success">Post</button>
-                   </form> 
-                </div>
+                    <button type="submit" class="btn btn-primary w-100">Submit</button>
+                </form>
+            </div>
         </section>
-
-</div>
-
-
+    </div>
 </body>
+
 </html>
