--- a/main/recruiter-register.html
+++ b/main/recruiter-register.html
@@ -22,7 +22,7 @@
         </div>
         <ul>
           <li>
-            <a href="/main/job-list.html"><i class="fas fa-user"></i>
+            <a href="/main/job-list.php"><i class="fas fa-user"></i>
               <span class="nav-item">Dashboard</span></a>
           </li>
           <li>
