--- a/main/contact.html
+++ b/main/contact.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="/main/index.html" class="nav-item nav-link">Home</a>
-                    <!-- <a href="job-list.html" class="nav-item nav-link">Job List</a> -->
+                    <!-- <a href="job-list.php" class="nav-item nav-link">Job List</a> -->
                     <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                     
                     
