--- a/main/job-detail.html
+++ b/main/job-detail.html
@@ -113,7 +113,7 @@
                             <br>
                             <div class="row g-3">
                                 <div class="col-12">
-                                    <button class="btn btn-primary w-100" onclick="job-list.php">Go Back</button>
+                                    <a href="/main/job-list.php" class="nav-item nav-link">Go Back</a>
                                 </div>
                             </div>
                         </div>
