--- a/main/login.html
+++ b/main/login.html
@@ -53,7 +53,7 @@
           </form>
           <p>
             <span> Already have an account? </span>
-            <b onclick="toggle()" class="button"> Sign in here </b>
+            <b onclick="toggle()" class="pointer"> Sign in here </b>
           </p>
         </div>
         <div class="col align-items-center flex-col sign-in">
@@ -86,12 +86,8 @@
             <span> Don't have an account? </span>
             <b onclick="toggle()" class="pointer"> Sign up here </b>
           </p>
-          <button>
-            <a href="/main/recruiter-register.html" class="pointer">Register</a>
-          </button>
-          <button>
-            <a href="/main/recruiter-jobpost.html" class="pointer">List a Job</a>
-          </button>
+       
+         
         </div>
       </div>
     </div>
